Create multi-volumes book

--- a/VietphraseMixHTML/VietphraseMixHTML.csproj
+++ b/VietphraseMixHTML/VietphraseMixHTML.csproj
@@ -176,12 +176,28 @@
     </Compile>
     <Compile Include="Utility.cs" />
     <Compile Include="WorkingThread.cs" />
+    <None Include="template\mykindlebook.opf">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="template\toc.ncx">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <SubType>Designer</SubType>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Content Include="data\bookmark.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="data\ChinesePhienAmWords.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="template\mykindlebook.html">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="template\style.css">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="template\toc.html">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <None Include="data\utf8website.txt">
