--- a/VietphraseMixHTML/VietphraseMixHTML.csproj
+++ b/VietphraseMixHTML/VietphraseMixHTML.csproj
@@ -82,6 +82,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Downloaders\UukanshuDownloader.cs" />
     <Compile Include="Downloaders\DefaultDownloader.cs" />
     <Compile Include="Downloaders\Downloaders.cs" />
     <Compile Include="Downloaders\GoogleTranslateDownloader.cs" />
