--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,5 @@
 /VietphraseMixHTML/obj/Debug
 /VietphraseMixHTML/bin/Debug
 
+/.vs/VietphraseMixHTML/DesignTimeBuild
+/.vs/VietphraseMixHTML/v15/Server/sqlite3
