--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,8 @@
 /VietphraseMixHTML/obj/Debug
 /VietphraseMixHTML/bin/Debug
 
+/.vs/VietphraseMixHTML/v16/.suo
+/.vs/VietphraseMixHTML/v16/Server/sqlite3
+/.vs/slnx.sqlite
+/VietphraseMixHTML/obj/Release
+/.vs
