--- a/VietphraseMixHTML/packages.config
+++ b/VietphraseMixHTML/packages.config
@@ -1,7 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="DotNetZip" version="1.9.6" targetFramework="net4" />
-  <package id="InformationBox" version="0.9.0" targetFramework="net4" />
-  <package id="Newtonsoft.Json" version="5.0.8" targetFramework="net4" />
-  <package id="ServiceStack.Text" version="4.0.5" targetFramework="net4" />
+  <package id="DotNetZip" version="1.15.0" targetFramework="net48" />
+  <package id="InformationBox" version="1.2.0.91" targetFramework="net48" />
+  <package id="Microsoft.CSharp" version="4.7.0" targetFramework="net48" />
+  <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net48" />
+  <package id="ServiceStack.Text" version="5.13.0" targetFramework="net48" />
+  <package id="System.Buffers" version="4.5.1" targetFramework="net48" />
+  <package id="System.Memory" version="4.5.4" targetFramework="net48" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net48" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.3" targetFramework="net48" />
 </packages>
